# PaperScope

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
calibration/cases/: correct_rounding_specificity.json  grim_survey_score.json  grimmer_sd_consistency.json  operator_boundary_specificity.json  pvalue_decision_flip.json  quick_sd_bounds.json  truncation_convention.json
docs/: corpus-knowledge-base.md  systematic-review.md  validate.md
docs/plans/shipped/: permanent-library.md
examples/forensic/: README.md  make_demo_paper.py  table1.json
paperscope/: __init__.py  __main__.py
paperscope/analysis/: author_profile.py  forensic_report.py  forensic_stats.py  journal_targeting.py  related_radar.py  reported_stats.py
paperscope/bib/: sourcing_page.py
paperscope/harvest/sources/: arxiv.py  (+1 more)
paperscope/net/: __init__.py  openalex_client.py
paperscope/systematic_review/: README.md  __main__.py  rater_compare.py
paperscope/text/: latex.py
scripts/: check_public_safe.py
tests/: conftest.py  test_acquire.py  test_check_public_safe.py  test_cli_smoke.py  test_doc_drift.py  test_embed_foundation.py  test_forensic_cli_e2e.py  test_forensic_methodology.py  test_forensic_report.py  test_harvest_download.py  test_knowledge_base.py  test_openalex_client.py  test_packaging.py  test_permanent_library.py  test_rater_compare.py  test_reported_stats.py  test_review_site_links.py  test_sr_acquire_hint.py  test_sr_effective_overrides.py  test_text_foundation.py  test_validate.py
(+11 files in other folders)
